// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots MySQL / MariaDB > composite-identifiers.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`ligne_commande\` (
  \`id\` VARCHAR(255) NOT NULL,
  \`no_ligne\` INT NOT NULL,
  CONSTRAINT \`pk_ligne_commande\` PRIMARY KEY (\`id\`, \`no_ligne\`)
);
"
`;

exports[`snapshots MySQL / MariaDB > hotel.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`client\` (
  \`id_client\` INT NOT NULL,
  \`nom\` VARCHAR(100) NOT NULL,
  \`prenom\` VARCHAR(100) NOT NULL,
  \`email\` VARCHAR(255),
  \`telephone\` VARCHAR(20),
  CONSTRAINT \`pk_client\` PRIMARY KEY (\`id_client\`),
  CONSTRAINT \`uq_client_email\` UNIQUE (\`email\`)
);

CREATE TABLE \`chambre\` (
  \`id_chambre\` INT NOT NULL,
  \`numero\` VARCHAR(10) NOT NULL,
  \`type\` VARCHAR(50) NOT NULL,
  \`etage\` INT,
  \`prix_nuit\` DECIMAL(8,2) NOT NULL,
  CONSTRAINT \`pk_chambre\` PRIMARY KEY (\`id_chambre\`),
  CONSTRAINT \`uq_chambre_numero\` UNIQUE (\`numero\`)
);

CREATE TABLE \`reservation\` (
  \`id_reservation\` INT NOT NULL,
  \`date_arrivee\` DATE NOT NULL,
  \`date_depart\` DATE NOT NULL,
  \`nombre_personnes\` INT NOT NULL,
  \`statut\` VARCHAR(20) NOT NULL,
  \`client_id_client\` INT NOT NULL,
  CONSTRAINT \`pk_reservation\` PRIMARY KEY (\`id_reservation\`)
);

CREATE TABLE \`concerner\` (
  \`reservation_id_reservation\` INT NOT NULL,
  \`chambre_id_chambre\` INT NOT NULL,
  \`prix_convenu\` DECIMAL(8,2),
  CONSTRAINT \`pk_concerner\` PRIMARY KEY (\`reservation_id_reservation\`, \`chambre_id_chambre\`)
);

ALTER TABLE \`reservation\`
  ADD CONSTRAINT \`fk_reservation_client\`
  FOREIGN KEY (\`client_id_client\`)
  REFERENCES \`client\` (\`id_client\`);

ALTER TABLE \`concerner\`
  ADD CONSTRAINT \`fk_concerner_reservation\`
  FOREIGN KEY (\`reservation_id_reservation\`)
  REFERENCES \`reservation\` (\`id_reservation\`);

ALTER TABLE \`concerner\`
  ADD CONSTRAINT \`fk_concerner_chambre\`
  FOREIGN KEY (\`chambre_id_chambre\`)
  REFERENCES \`chambre\` (\`id_chambre\`);
"
`;

exports[`snapshots MySQL / MariaDB > many-to-many.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`commande\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_commande\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`produit\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_produit\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`contenir\` (
  \`commande_id\` VARCHAR(255) NOT NULL,
  \`produit_id\` VARCHAR(255) NOT NULL,
  \`quantite\` INT NOT NULL,
  CONSTRAINT \`pk_contenir\` PRIMARY KEY (\`commande_id\`, \`produit_id\`)
);

ALTER TABLE \`contenir\`
  ADD CONSTRAINT \`fk_contenir_commande\`
  FOREIGN KEY (\`commande_id\`)
  REFERENCES \`commande\` (\`id\`);

ALTER TABLE \`contenir\`
  ADD CONSTRAINT \`fk_contenir_produit\`
  FOREIGN KEY (\`produit_id\`)
  REFERENCES \`produit\` (\`id\`);
"
`;

exports[`snapshots MySQL / MariaDB > name-collisions.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`date_debut\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_date_debut\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`date_debut_2\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_date_debut_2\` PRIMARY KEY (\`id\`)
);
"
`;

exports[`snapshots MySQL / MariaDB > one-to-many.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`client\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_client\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`commande\` (
  \`id\` VARCHAR(255) NOT NULL,
  \`client_id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_commande\` PRIMARY KEY (\`id\`)
);

ALTER TABLE \`commande\`
  ADD CONSTRAINT \`fk_commande_client\`
  FOREIGN KEY (\`client_id\`)
  REFERENCES \`client\` (\`id\`);
"
`;

exports[`snapshots MySQL / MariaDB > one-to-one.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`personne\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_personne\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`passeport\` (
  \`id\` VARCHAR(255) NOT NULL,
  \`personne_id\` VARCHAR(255),
  CONSTRAINT \`pk_passeport\` PRIMARY KEY (\`id\`),
  CONSTRAINT \`uq_passeport_personne_id\` UNIQUE (\`personne_id\`)
);

ALTER TABLE \`passeport\`
  ADD CONSTRAINT \`fk_passeport_personne\`
  FOREIGN KEY (\`personne_id\`)
  REFERENCES \`personne\` (\`id\`);
"
`;

exports[`snapshots MySQL / MariaDB > reflexive.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`employe\` (
  \`id\` VARCHAR(255) NOT NULL,
  \`manager_id\` VARCHAR(255),
  CONSTRAINT \`pk_employe\` PRIMARY KEY (\`id\`)
);

ALTER TABLE \`employe\`
  ADD CONSTRAINT \`fk_employe_employe\`
  FOREIGN KEY (\`manager_id\`)
  REFERENCES \`employe\` (\`id\`);
"
`;

exports[`snapshots MySQL / MariaDB > ternary.mysql.sql 1`] = `
"-- Generated by Modrise
-- MySQL / MariaDB dialect

CREATE TABLE \`enseignant\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_enseignant\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`matiere\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_matiere\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`classe\` (
  \`id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_classe\` PRIMARY KEY (\`id\`)
);

CREATE TABLE \`enseigner\` (
  \`enseignant_id\` VARCHAR(255) NOT NULL,
  \`matiere_id\` VARCHAR(255) NOT NULL,
  \`classe_id\` VARCHAR(255) NOT NULL,
  CONSTRAINT \`pk_enseigner\` PRIMARY KEY (\`enseignant_id\`, \`matiere_id\`, \`classe_id\`)
);

ALTER TABLE \`enseigner\`
  ADD CONSTRAINT \`fk_enseigner_enseignant\`
  FOREIGN KEY (\`enseignant_id\`)
  REFERENCES \`enseignant\` (\`id\`);

ALTER TABLE \`enseigner\`
  ADD CONSTRAINT \`fk_enseigner_matiere\`
  FOREIGN KEY (\`matiere_id\`)
  REFERENCES \`matiere\` (\`id\`);

ALTER TABLE \`enseigner\`
  ADD CONSTRAINT \`fk_enseigner_classe\`
  FOREIGN KEY (\`classe_id\`)
  REFERENCES \`classe\` (\`id\`);
"
`;
